fix footer layout issues when not enough content on screen

--- a/src/Styles/LikelyLoans/Misc.scss
+++ b/src/Styles/LikelyLoans/Misc.scss
@@ -10,7 +10,12 @@
     *:focus {
         outline: -webkit-focus-ring-color auto 0px !important;
     }
-    
+
+    html {
+    position: relative;
+    min-height: 100%;
+    }
+   
     .nowrap {
         white-space: nowrap;
     }
@@ -26,6 +31,7 @@
     
     body {
         height: 100%;
+        margin-bottom: 85px !important;
     }
     
     h1,
